Remove workaround for g_struct_info_get_size reporting incorrect size

Remove workaround for g_struct_info_get_size reporting incorrect size
for boxed GValues. Verified this now returns the correct size of 24.

https://bugzilla.gnome.org/show_bug.cgi?id=622711